Updated text to wrap correctly for mobile users

--- a/style.css
+++ b/style.css
@@ -15,16 +15,15 @@
     font-weight: bold;
     text-align: left;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin-left: 875px;
 }
 .about_me p {
-    margin-left: 900px;
     font-size: xx-large;
 }
 
 .mom_image {
     width: 50%;
     float: left;
+    margin-right: 5%;
 }
 
 /* Privacy Policy Section */
